--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,16 @@
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
+
+# Visual Studio files
+*.sln
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
+
+# Export files
+export.csv
+
+# OS files
+.DS_Store
+Thumbs.db
