Optimize memory usage with build flags and partition scheme
- Add optimization flags: -Os, -DCORE_DEBUG_LEVEL=0
- Enable PSRAM support with cache issue fix
- Use huge_app.csv partition for more program space
- Flash usage reduced from 91.1% to 37.1% (freed ~2MB)
- RAM usage optimized to 16.5%

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,17 @@ framework = arduino
 board_build.f_flash= 80000000L
 board_build.flash_mode = qio
 monitor_speed = 115200
+
+; Memory optimization flags
+build_flags = 
+  -Os                          ; Optimize for size
+  -DCORE_DEBUG_LEVEL=0         ; Disable debug output
+  -DBOARD_HAS_PSRAM            ; Enable PSRAM support
+  -mfix-esp32-psram-cache-issue ; Fix PSRAM cache issue
+
+; Partition scheme for more app space
+board_build.partitions = huge_app.csv
+
 lib_deps =
   bblanchon/ArduinoJson @ ^7.2.0
   knolleary/PubSubClient @ ^2.8
